force-app/main/default/objects/Account_Case_Junction__c.object
<CustomObject>
    <description>junction object to track when multiple contacts are added to a case</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Customers</relationshipLabel>
        <relationshipName>Enquiries_On_Behalf_Off</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Customer_Acc_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Acc Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enquiries made about me</relationshipLabel>
        <relationshipName>Enquiries_On_Behalf_Of</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enquiries made about me</relationshipLabel>
        <relationshipName>Enquiries_On_Behalf_Of</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Related Customer</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Enquiry On Behalf Of</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>